--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "dependencies": {
+    "@osohq/dev-server": "*",
+    "next": "^15.1.3",
     "oso-cloud": "2.4.4",
     "tailwindcss": "3.4.0"
   },
   "scripts": {
-    "serve": "netlify dev --dir public",
+    "dev": "next dev",
     "tailwind": "tailwindcss -o ./public/tw.css",
     "tailwind:watch": "tailwindcss -o ./public/tw.css --watch"
-  },
-  "devDependencies": {
-    "netlify-cli": "^19.0.0"
   }
 }
