--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "tour-of-polar",
   "version": "0.1.0",
   "dependencies": {
+    "@mongoosejs/studio": "0.0.70",
     "@osohq/dev-server": "*",
+    "mongoose": "^8.13",
     "next": "^15.1.3",
     "oso-cloud": "2.4.4",
     "tailwindcss": "3.4.0"
   },
   "scripts": {
-    "build": "npm run tailwind && next build",
+    "build": "next build",
     "dev": "next dev",
+    "postinstall": "npm run tailwind && node ./postinstall",
     "tailwind": "tailwindcss -o ./public/tw.css",
     "tailwind:watch": "tailwindcss -o ./public/tw.css --watch"
   }
