--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@mongoosejs/studio": "0.0.70",
     "@osohq/dev-server": "*",
     "mongoose": "^8.13",
-    "next": "^15.1.3",
+    "next": "15.2.x",
     "oso-cloud": "2.4.4",
     "tailwindcss": "3.4.0"
   },
