--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tour-of-polar",
   "version": "0.1.0",
   "dependencies": {
-    "@mongoosejs/studio": "^0.0.137",
+    "@mongoosejs/studio": "^0.1.5",
     "@osohq/dev-server": "*",
-    "mongoose": "^8.13",
+    "mongoose": "^9.0.0-0",
     "next": "^15.3.0",
     "oso-cloud": "^2.5.2",
     "tailwindcss": "3.4.0"
